--- a/index.html
+++ b/index.html
@@ -4,72 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ali Rezaei - CV</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css"> <!-- Your custom styles will go here -->
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Ali Rezaei</h1>
+        <header class="text-center bg-light p-4 mb-4">
+            <h1 class="display-4">Ali Rezaei</h1>
             <p>Email: <a href="mailto:ali.rezaei@ed.ac.uk">ali.rezaei@ed.ac.uk</a></p>
-            <p><a href="https://www.linkedin.com/in/ali-rezaei-dr-rer-nat-84385a57/">LinkedIn</a> | <a href="https://scholar.google.com">Google Scholar</a></p>
+            <p><a href="https://www.linkedin.com/in/ali-rezaei-dr-rer-nat-84385a57/" class="btn btn-primary btn-sm">LinkedIn</a> 
+            <a href="https://scholar.google.com" class="btn btn-secondary btn-sm">Google Scholar</a></p>
         </header>
 
-        <section id="education" class="section">
-            <h2>Education</h2>
-            <ul>
-                <li><strong>University of Urmia</strong> – B.Sc. in Solid State Physics (Sep 2007 – Aug 2011)</li>
-                <li><strong>Institute for Advanced Studies in Basic Sciences</strong> – M.Sc. in Condensed Matter Physics (Sep 2012 – Apr 2015)</li>
-                <li><strong>University of Konstanz</strong> – Ph.D. in Condensed Matter Physics (Jan 2016 – Dec 2019)</li>
+        <section id="education" class="mb-5">
+            <h2 class="text-primary">Education</h2>
+            <ul class="list-group">
+                <li class="list-group-item"><strong>University of Urmia</strong> – B.Sc. in Solid State Physics (Sep 2007 – Aug 2011)</li>
+                <li class="list-group-item"><strong>Institute for Advanced Studies in Basic Sciences</strong> – M.Sc. in Condensed Matter Physics (Sep 2012 – Apr 2015)</li>
+                <li class="list-group-item"><strong>University of Konstanz</strong> – Ph.D. in Condensed Matter Physics (Jan 2016 – Dec 2019)</li>
             </ul>
         </section>
 
-        <section id="employment" class="section">
-            <h2>Academic Employment</h2>
-            <ul>
-                <li><strong>Research Associate</strong>, University of Edinburgh – Jan 2024 – Present</li>
-                <li><strong>Research Associate</strong>, University of Glasgow – Aug 2020 – Dec 2023</li>
-                <li><strong>Postdoctoral Research Associate</strong>, University of Konstanz – Apr 2020 – Jul 2020</li>
+        <section id="employment" class="mb-5">
+            <h2 class="text-primary">Academic Employment</h2>
+            <ul class="list-group">
+                <li class="list-group-item"><strong>Research Associate</strong>, University of Edinburgh – Jan 2024 – Present</li>
+                <li class="list-group-item"><strong>Research Associate</strong>, University of Glasgow – Aug 2020 – Dec 2023</li>
+                <li class="list-group-item"><strong>Postdoctoral Research Associate</strong>, University of Konstanz – Apr 2020 – Jul 2020</li>
             </ul>
         </section>
 
-        <section id="skills" class="section">
-            <h2>Skills</h2>
-            <ul>
-                <li>Programming Languages: C, C++, Python, Fortran, MATLAB</li>
-                <li>Libraries: SciPy, NumPy, Matplotlib, OpenMP, MPI</li>
-                <li>Tools: Git, Docker, Kubernetes, CI/CD, HPC, Bash scripting</li>
+        <section id="skills" class="mb-5">
+            <h2 class="text-primary">Skills</h2>
+            <ul class="list-group">
+                <li class="list-group-item">Programming Languages: C, C++, Python, Fortran, MATLAB</li>
+                <li class="list-group-item">Libraries: SciPy, NumPy, Matplotlib, OpenMP, MPI</li>
+                <li class="list-group-item">Tools: Git, Docker, Kubernetes, CI/CD, HPC, Bash scripting</li>
             </ul>
         </section>
 
-        <section id="publications" class="section">
-            <h2>Publications</h2>
-            <ul>
-                <li>Ankit Dixit, Ali Rezaei, et al., "Unravelling the Impact of Random Dopants Fluctuations on Si-based 3nm NSFET", IEEE NANO (2024).</li>
-                <li>Tongfei Liu, Ali Rezaei, et al., "Study of Electron Mobility on Ultra-scaled Silicon Nanosheet FET", Physica Scripta 99, 075410 (2024).</li>
+        <section id="publications" class="mb-5">
+            <h2 class="text-primary">Publications</h2>
+            <ul class="list-group">
+                <li class="list-group-item">Ankit Dixit, Ali Rezaei, et al., "Unravelling the Impact of Random Dopants Fluctuations on Si-based 3nm NSFET", IEEE NANO (2024).</li>
+                <li class="list-group-item">Tongfei Liu, Ali Rezaei, et al., "Study of Electron Mobility on Ultra-scaled Silicon Nanosheet FET", Physica Scripta 99, 075410 (2024).</li>
             </ul>
         </section>
 
-        <!-- Placeholder for Projects -->
-        <section id="projects" class="section">
-            <h2>Projects (Coming Soon)</h2>
+        <section id="projects" class="mb-5">
+            <h2 class="text-primary">Projects (Coming Soon)</h2>
             <p>Details about ongoing and past projects will be added here.</p>
         </section>
 
-        <!-- Placeholder for Awards -->
-        <section id="awards" class="section">
-            <h2>Awards & Honors (Coming Soon)</h2>
+        <section id="awards" class="mb-5">
+            <h2 class="text-primary">Awards & Honors (Coming Soon)</h2>
             <p>A list of awards and honors will be added soon.</p>
         </section>
 
-        <!-- Placeholder for Certifications -->
-        <section id="certifications" class="section">
-            <h2>Certifications (Coming Soon)</h2>
+        <section id="certifications" class="mb-5">
+            <h2 class="text-primary">Certifications (Coming Soon)</h2>
             <p>Professional certifications and achievements will be listed here.</p>
         </section>
 
-        <footer>
+        <footer class="text-center bg-light p-4">
             <p>Contact: <a href="mailto:ali.rezaei@ed.ac.uk">ali.rezaei@ed.ac.uk</a></p>
         </footer>
     </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
