--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="display-4">Ali Rezaei</h1>
             <p>Email: <a href="mailto:ali.rezaei@ed.ac.uk">ali.rezaei@ed.ac.uk</a></p>
             <p><a href="https://www.linkedin.com/in/ali-rezaei-dr-rer-nat-84385a57/" class="btn btn-primary btn-sm">LinkedIn</a> 
-            <a href="https://scholar.google.com" class="btn btn-secondary btn-sm">Google Scholar</a></p>
+            <a href="https://scholar.google.com/citations?user=iq82UioAAAAJ&hl=en" class="btn btn-secondary btn-sm">Google Scholar</a></p>
         </header>
 
         <section id="education" class="mb-5">
