--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <h1 class="display-4">Ali Rezaei</h1>
             <p>Email: <a href="mailto:ali.rezaei@ed.ac.uk">ali.rezaei@ed.ac.uk</a></p>
             <p><a href="https://www.linkedin.com/in/ali-rezaei-dr-rer-nat-84385a57/" class="btn btn-primary btn-sm">LinkedIn</a> 
-            <a href="https://scholar.google.com/citations?user=iq82UioAAAAJ&hl=en" class="btn btn-secondary btn-sm">Google Scholar</a></p>
+            <a href="https://scholar.google.com/citations?user=iq82UioAAAAJ&hl" class="btn btn-secondary btn-sm">Google Scholar</a></p>
         </header>
 
         <section id="education" class="mb-5">
             <h2 class="text-primary">Education</h2>
             <ul class="list-group">
-                <li class="list-group-item"><strong>University of Urmia</strong> – B.Sc. in Solid State Physics (Sep 2007 – Aug 2011)</li>
-                <li class="list-group-item"><strong>Institute for Advanced Studies in Basic Sciences</strong> – M.Sc. in Condensed Matter Physics (Sep 2012 – Apr 2015)</li>
-                <li class="list-group-item"><strong>University of Konstanz</strong> – Ph.D. in Condensed Matter Physics (Jan 2016 – Dec 2019)</li>
+                <li class="list-group-item"><strong>University of Urmia</strong> – B.Sc. in Solid State Physics (2007 – 2011)</li>
+                <li class="list-group-item"><strong>Institute for Advanced Studies in Basic Sciences</strong> – M.Sc. in Condensed Matter Physics (2012 – 2015)</li>
+                <li class="list-group-item"><strong>University of Konstanz</strong> – Ph.D. in Condensed Matter Physics (2016 – 2019)</li>
             </ul>
         </section>
 
@@ -46,12 +46,170 @@
             </ul>
         </section>
 
-        <section id="publications" class="mb-5">
-            <h2 class="text-primary">Publications</h2>
-            <ul class="list-group">
-                <li class="list-group-item">Ankit Dixit, Ali Rezaei, et al., "Unravelling the Impact of Random Dopants Fluctuations on Si-based 3nm NSFET", IEEE NANO (2024).</li>
-                <li class="list-group-item">Tongfei Liu, Ali Rezaei, et al., "Study of Electron Mobility on Ultra-scaled Silicon Nanosheet FET", Physica Scripta 99, 075410 (2024).</li>
-            </ul>
+        <section id="publications" class="timeline-section">
+            <h2 class="text-primary mb-4">Publications</h2>
+            
+            <!-- Timeline for 2024 -->
+            <div class="timeline-year">2024</div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/10628880" target="_blank" class="publication-title">
+                        Unravelling the Impact of Random Dopant Fluctuations on Si-Based 3nm NSFET: A NEGF Analysis
+                    </a>
+                    <p>2024 IEEE 24th International Conference on Nanotechnology (NANO), 5-8</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://iopscience.iop.org/article/10.1088/1402-4896/ad56d9/meta" target="_blank" class="publication-title">
+                        The study of electron mobility on ultra-scaled silicon nanosheet FET
+                    </a>
+                    <p>Physica Scripta 99 (7), 075410</p>
+                </div>
+            </div>
+
+            <!-- Timeline for 2023 -->
+            <div class="timeline-year">2023</div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0038110123002022" target="_blank" class="publication-title">
+                        Charge dynamics of amino acids fingerprints and the effect of density on FinFET-based Electrolyte-gated sensor
+                    </a>
+                    <p>Solid-State Electronics 210, 108789</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/10343913" target="_blank" class="publication-title">
+                        Insights into the Ultra-Steep Subthreshold Slope Gate-all-around Feedback-FET for memory and sensing applications
+                    </a>
+                    <p>2023 IEEE Nanotechnology Materials and Devices Conference (NMDC), 617-620</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/10319578" target="_blank" class="publication-title">
+                        Electrolyte-Gated FET-based Sensing of Immobilized Amphoteric Molecules Including the Variability in Affinity of the Reactive Sites
+                    </a>
+                    <p>2023 International Conference on Simulation of Semiconductor Processes and Devices (SISPAD)</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/10319587" target="_blank" class="publication-title">
+                        Fully Convolutional Generative Machine Learning Method for Accelerating Non-Equilibrium Green’s Function Simulations
+                    </a>
+                    <p>2023 International Conference on Simulation of Semiconductor Processes and Devices (SISPAD)</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/10231075" target="_blank" class="publication-title">
+                        Convolutional machine learning method for accelerating nonequilibrium green’s function simulations in nanosheet transistor
+                    </a>
+                    <p>IEEE Transactions on Electron Devices</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/10281172" target="_blank" class="publication-title">
+                        Novel Detection Methodology of Milk-Oligopeptides Fingerprints using Ion-Sensitive BioFET
+                    </a>
+                    <p>2023 IEEE BioSensors Conference (BioSensors), 1-4</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://www.sciencedirect.com/science/article/pii/S003811012200260X" target="_blank" class="publication-title">
+                        Hierarchical simulation of nanosheet field effect transistor: NESS flow
+                    </a>
+                    <p>Solid-State Electronics 199, 108489</p>
+                </div>
+            </div>
+
+            <!-- Timeline for 2022 -->
+            <div class="timeline-year">2022</div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0038110122001113" target="_blank" class="publication-title">
+                        Statistical device simulations of III-V nanowire resonant tunneling diodes as physical unclonable functions source
+                    </a>
+                    <p>Solid-State Electronics 194, 108339</p>
+                </div>
+            </div>
+
+            <!-- Timeline for 2021 -->
+            <div class="timeline-year">2021</div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://ieeexplore.ieee.org/abstract/document/9620465" target="_blank" class="publication-title">
+                        Tcad simulation of novel semiconductor devices
+                    </a>
+                    <p>2021 IEEE 14th International Conference on ASIC (ASICON), 1-4</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://www.mdpi.com/2072-666X/12/6/680" target="_blank" class="publication-title">
+                        Simulation and modeling of novel electronic device architectures with NESS (nano-electronic simulation software): A modular nano TCAD simulation framework
+                    </a>
+                    <p>Micromachines 12 (6), 680</p>
+                </div>
+            </div>
+
+            <!-- Timeline for 2020 -->
+            <div class="timeline-year">2020</div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://eprints.gla.ac.uk/227769" target="_blank" class="publication-title">
+                        Nano-Electronic Simulation Software (NESS): A Novel Open-Source TCAD Simulation Environment
+                    </a>
+                    <p>Journal of Microelectronic Manufacturing 3 (4), 20030407</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.2.033336" target="_blank" class="publication-title">
+                        Phase-controlled spin and charge currents in a superconductor-ferromagnet hybrid
+                    </a>
+                    <p>Physical Review Research 2 (3), 033336</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.121.247702" target="_blank" class="publication-title">
+                        Spin splitting induced in a superconductor by an antiferromagnetic insulator
+                    </a>
+                    <p>Physical Review Letters 121 (24), 247702</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://iopscience.iop.org/article/10.1088/1367-2630/aad2a3/meta" target="_blank" class="publication-title">
+                        Spin-flip enhanced thermoelectricity in superconductor-ferromagnet bilayers
+                    </a>
+                    <p>New Journal of Physics 20 (7), 073034</p>
+                </div>
+            </div>
+
+            <!-- Add more years and publications as needed -->
+
         </section>
 
         <section id="projects" class="mb-5">
