--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="https://scholar.google.com/citations?user=iq82UioAAAAJ&hl" class="btn btn-success btn-sm">Google Scholar</a>
             <a href="https://systems-nuts.com" class="btn btn-info btn-sm">Systems-Nuts</a>
             <a href="https://www.roarq.cs.ox.ac.uk/people/" class="btn btn-dark btn-sm">RoaRQ</a>
-            <a href="Ali_Rezaei_CV.pdf" target="_blank" class="btn btn-outline-primary btn-sm">Download PDF CV</a>
+            <a href="Ali_Rezaei_CV.pdf" target="_blank" class="btn btn-outline-primary btn-sm">PDF CV</a>
           </p>
       </header>
 
@@ -99,7 +99,7 @@
                   <strong>Research Associate</strong>, University of Edinburgh, UK — Feb 2024 – Present<br>
                   ICSA, EPCC & RoaRQ – Quantum Computing HPC (QuEST, C)
                   <ul class="mt-2">
-                      <li>Co-developing QuEST v4 with a focus on optimisation prototyping and debunking performance bottlenecks through optimised algorithms that achieve several-fold speed-ups.</li>
+                      <li>Co-developing <a href="https://github.com/QuEST-Kit/QuEST/blob/main/docs/v4.md" target="_blank" rel="noopener">QuEST v4</a> with a focus on optimisation prototyping and debunking performance bottlenecks through optimised algorithms that achieve several-fold speed-ups. Code available <a href="https://github.com/systems-nuts/QuEST-newDS/tree/New_DS_NUMA" target="_blank" rel="noopener">here</a>; upstream merge pending completion of integration testing.</li>
                       <li>Low-level tuning: redesigned state-vector data layout, intrinsic SIMD (SSE2/AVX2/AVX-512) kernels, cache blocking, FMA, loop unrolling, and software prefetching.</li>
                       <li>NUMA-aware execution: locality-sensitive task scheduler, thread pinning, and novel memory placement strategy that nearly eliminates remote-access penalties and improves effective bandwidth.</li>
                       <li>Micro-architectural profiling: located hotspots and memory-bandwidth limits with Intel VTune, Memory Latency Checker, Intel PCM, and Linux perf; insights fed back into the kernel design.</li>
