--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                   <em>Thesis:</em>
                   <a href="https://www.researchgate.net/publication/316881233_Thermoelectric_Properties_of_3D_Topological_Insulators_Effects_of_Gap_and_Hexagonal_Warping" target="_blank">
                   Thermoelectric properties of 3D topological insulators: effects of the gap and hexagonal warping
-                  </a> (Grade: 19.5/20)<br>
-                  <em>Group:</em> Many-body Theory Group (supervised by Dr. Saeed H. Abedinpour & Dr. Jahan Abouie)
+                  </a> <br>
+                  <em>Many-body Theory Group</em> (supervised by Dr. Saeed H. Abedinpour & Dr. Jahan Abouie)
               </li>
               <li class="list-group-item">
                   <strong>University of Konstanz</strong>, Konstanz, Germany<br>
