--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <header class="text-center bg-light p-4 mb-4">
           <h1 class="display-4">Ali Rezaei (Dr. rer. nat.)</h1>
           <p>ICSA, School of Informatics – University of Edinburgh, EH8 9AB, UK</p>
-          <p><a href="mailto:ali.rezaei@ed.ac.uk">ali.rezaei@ed.ac.uk</a> | +44 7485 247804</p>
+          <p><a href="mailto:ali.rezaei@ed.ac.uk">ali.rezaei@ed.ac.uk</a> </p>
           <p>
             <a href="https://www.linkedin.com/in/ali-rezaei-dr-rer-nat-84385a57/" class="btn btn-primary btn-sm">LinkedIn</a>
             <a href="https://www.researchgate.net/profile/Ali-Rezaei-3" class="btn btn-secondary btn-sm">ResearchGate</a>
