--- a/index.html
+++ b/index.html
@@ -70,22 +70,6 @@
                   Non-equilibrium and spin transport in hybrids of superconductors and magnets
                   </a> (magna cum laude)<br>
                   <em>Quantum Transport Group</em> (supervised by Prof. Dr. Wolfgang Belzig)
-                  <ul class="mt-2">
-                      <li>Analytical & numerical investigation of quantum transport properties (non-equilibrium and spin)
-                          in superconductor–ferromagnet (and –antiferromagnet) proximity-coupled heterostructures.</li>
-                      <li>Developed numerical packages (Fortran, MATLAB, Python) utilizing the Eilenberger/Usadel quasiclassical Green’s function methods and quantum circuit theory (Nazarov).</li>
-                      <li>Studied multiple phenomena in superconducting hybrids, including:</li>
-                      <ul>
-                          <li>Generation, control, and detection of equal-spin triplet Cooper pairs in a spin-valve (S/FM) setup.</li>
-                          <li>Spin-flip–enhanced thermoelectricity in S/FM devices.</li>
-                          <li>Induced spin-splitting in S/AFM hybrids.</li>
-                      </ul>
-                      <li>Teaching Assistant for:</li>
-                      <ul>
-                          <li>Quantum Field Theory of Nonequilibrium States (SS 2019)</li>
-                          <li>Advanced Quantum Theory & Electrodynamics (WS 2017/18)</li>
-                          <li>Advanced Condensed Matter Physics (WS 2016/17)</li>
-                      </ul>
                   </ul>
               </li>
           </ul>
@@ -118,10 +102,29 @@
                   </ul>
               </li>
               <li class="list-group-item">
-                  <strong>Postdoctoral Research Associate</strong>, University of Konstanz, Germany — Apr 2020 – Jul 2020
+                  <strong>Ph.D. Researcher</strong>, University of Konstanz, Germany — Jan 2016 – Dec 2019
+                  <ul class="mt-2">
+                      <li>Analytical & numerical investigation of quantum transport properties (non-equilibrium and spin)
+                          in superconductor–ferromagnet (and –antiferromagnet) proximity-coupled heterostructures.</li>
+                      <li>Developed numerical packages (Fortran, MATLAB, Python) utilizing the Eilenberger/Usadel quasiclassical Green’s function methods and quantum circuit theory (Nazarov).</li>
+                      <li>Studied multiple phenomena in superconducting hybrids, including:</li>
+                      <ul>
+                          <li>Generation, control, and detection of equal-spin triplet Cooper pairs in a spin-valve (S/FM) setup.</li>
+                          <li>Spin-flip–enhanced thermoelectricity in S/FM devices.</li>
+                          <li>Induced spin-splitting in S/AFM hybrids.</li>
+                      </ul>
+                      <li>TA:</li>
+                      <ul>
+                          <li>Quantum Field Theory of Nonequilibrium States (SS 2019)</li>
+                          <li>Advanced Quantum Theory & Electrodynamics (WS 2017/18)</li>
+                          <li>Advanced Condensed Matter Physics (WS 2016/17)</li>
+                      </ul>
+                  </ul>
               </li>
           </ul>
       </section>
+
+      
 
       <!-- Skills -->
       <section id="skills" class="mb-5">
@@ -134,7 +137,7 @@
               <li class="list-group-item"><strong>Scientific Tools:</strong> MATLAB, GNU Octave, Wolfram Mathematica</li>
               <li class="list-group-item"><strong>Scientific Libraries:</strong> Eigen, LAPACK/BLAS, OpenBLAS, ARPACK++, SuperLU, Quadpack, GMM (GetFEM), SciPy, NumPy, pandas, SymPy, matplotlib</li>
               <li class="list-group-item"><strong>EDA / TCAD Toolchains:</strong> Synopsys Sentaurus, Silvaco Atlas, QuantumATK/QTX, OMEN/NEMO</li>
-              <li class="list-group-item"><strong>Soft Skills:</strong> Quick learner, strong communicator, collaborative, problem-solver, detail-oriented, adaptable</li>
+              <li class="list-group-item"><strong>Personal:</strong> Quick learner, strong communicator, collaborative, problem-solver, detail-oriented, adaptable</li>
           </ul>
       </section>
 
@@ -343,6 +346,7 @@
       <section id="certifications" class="mb-5">
           <h2 class="text-primary">Certifications</h2>
           <ul class="list-group">
+                <li class="list-group-item">Quantum Information (IBM Quantum Learning - <a href="https://www.credly.com/badges/c096b5ba-f161-4da1-8ba8-172087dee6d1/linked_in_profile">badge</a>)</li>
               <li class="list-group-item"><strong>Advanced Data Science with IBM Specialization</strong>
                   <ul class="mt-1">
                       <li><a href="https://www.credly.com/badges/a0d62ad3-370e-41c6-8b13-d91184e720ad/public_url">Fundamentals of Scalable Data Science</a></li>
