--- a/index.html
+++ b/index.html
@@ -333,6 +333,8 @@
                     <p>Physical Review Research 2 (3), 033336</p>
                 </div>
             </div>
+            <!-- Timeline for 2018 -->
+            <div class="timeline-year">2018</div>
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
