--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
           <h2 class="text-primary">Skills</h2>
           <ul class="list-group">
               <li class="list-group-item"><strong>Programming Languages:</strong> C, C++, Python, Fortran, Bash</li>
-              <li class="list-group-item"><strong>HPC & Quantum Toolchains:</strong> MPI, OpenMP, CUDA, SIMD intrinsics, Slurm, QuEST, QuESTlink, cuQuantum, Qiskit</li>
+              <li class="list-group-item"><strong>HPC & Quantum Toolchains:</strong> MPI, OpenMP, CUDA, SIMD intrinsics, Slurm, QuEST, QuESTlink, cuQuantum, Qiskit, Pennylane</li>
               <li class="list-group-item"><strong>Performance & Profiling:</strong> Intel VTune, Memory Latency Checker, PCM, Valgrind, Linux perf</li>
               <li class="list-group-item"><strong>DevOps & Build:</strong> Git (+CI/CD), CMake, Catch2/CTest, Spack, Conda, Docker, Kubernetes</li>
               <li class="list-group-item"><strong>Scientific Tools:</strong> MATLAB, GNU Octave, Wolfram Mathematica</li>
               <li class="list-group-item"><strong>EDA / TCAD Toolchains:</strong> Synopsys Sentaurus, Silvaco Atlas, QuantumATK/QTX, OMEN/NEMO</li>
-              <li class="list-group-item"><strong>Scientific Libraries:</strong> Eigen, LAPACK/BLAS, OpenBLAS, ARPACK++, SuperLU, Quadpack, GMM (GetFEM), SciPy, NumPy, pandas, SymPy, matplotlib</li>
               <li class="list-group-item"><strong>Personal:</strong> Quick learner, strong communicator, collaborative, problem-solver, detail-oriented, adaptable</li>
           </ul>
       </section>
@@ -165,7 +164,7 @@
       <section id="publications" class="timeline-section">
             <h2 class="text-primary mb-4">Publications</h2>
             
-            <!-- Timeline for 2024 -->
+            <!-- Timeline for 2025 -->
             <div class="timeline-year">2025</div>
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
@@ -174,6 +173,15 @@
                         Low-Level and NUMA-Aware Optimization for High-Performance Quantum Simulation
                     </a>
                     <p>arXiv preprint - arXiv.2506.09198 (2025)</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0038110125001170" target="_blank" class="publication-title">
+                        Mobility and intrinsic performance of silicon-based nanosheet FETs at 3 nm CMOS and beyond
+                    </a>
+                    <p>Solid-State Electronics 229, 109172 (2025)</p>
                 </div>
             </div>
             <div class="timeline-year">2024</div>
@@ -368,8 +376,9 @@
       <!-- Certifications -->
       <section id="certifications" class="mb-5">
           <h2 class="text-primary">Certifications</h2>
+          <li class="list-group-item">Proficiency in the basics of PennyLane — <a href="https://pennylane.ai/profile/AliRezaei/certificate/introduction-to-pennylane">pennylane.ai</a></li>
           <ul class="list-group">
-              <li class="list-group-item">IBM Qunatum
+              <li class="list-group-item">IBM Qunatum (Qiskit) 
                   <ul class="mt-1">
                       <li><a href="https://www.credly.com/earner/earned/badge/cade8cfa-336c-4987-a7b2-2983bc4243b3">Variational Algorithm Design</a></li>
                       <li><a href="https://www.credly.com/earner/earned/badge/ae892615-5336-4a68-be96-dd48b6a69155">Quantum Algorithms</a></li>
@@ -384,9 +393,9 @@
                   </ul>
               </li>
               <li class="list-group-item">IBM Data Science Professional Certificate — <a href="https://www.credly.com/badges/a15cd94a-8271-4a6c-9611-33232dea9e92/linked_in_profile">Data Science Orientation</a></li>
-              <li class="list-group-item">Machine Learning (Stanford University) — <a href="https://www.coursera.org/account/accomplishments/verify/URRY2UJ3RXLM">Coursera Certificate</a></li>
-              <li class="list-group-item">SQL for Data Science (UC Davis) — <a href="https://www.coursera.org/account/accomplishments/verify/5SSQXKFGTSGB">Coursera Certificate</a></li>
-              <li class="list-group-item">Object-Oriented Data Structures in C++ (University of Illinois) — <a href="https://www.coursera.org/account/accomplishments/certificate/URZ9VK254GTA">Coursera Certificate</a></li>
+              <li class="list-group-item">Machine Learning (Stanford University) — <a href="https://www.coursera.org/account/accomplishments/verify/URRY2UJ3RXLM">Coursera </a></li>
+              <li class="list-group-item">SQL for Data Science (UC Davis) — <a href="https://www.coursera.org/account/accomplishments/verify/5SSQXKFGTSGB">Coursera </a></li>
+              <li class="list-group-item">Object-Oriented Data Structures in C++ (University of Illinois) — <a href="https://www.coursera.org/account/accomplishments/certificate/URZ9VK254GTA">Coursera </a></li>
               <li class="list-group-item">Workshop on Scientific Presenting for Physicists (University of Konstanz)</li>
           </ul>
       </section>
