--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section id="summary" class="mb-5">
         <h2 class="text-primary">Professional Summary</h2>
         <p class="text-justify">
-            Experienced in high-performance classical simulation of quantum computing and TCAD-based nanoelectronic device modelling, with a strong track record in developing, maintaining, and optimizing scalable simulation software across quantum, semiconductor, and superconducting domains — from quantum circuit emulators to NEGF-based solvers for nanoscale transistors.
+            Experienced in high-performance classical simulation of quantum computing and TCAD-based nanoelectronic device modelling, with a strong track record of developing, maintaining, and optimizing scalable simulation software across quantum, semiconductor, and superconducting domains – from quantum circuit emulators to NEGF-based solvers for nanoscale transistors.
         </p>
         </section>
 
@@ -89,11 +89,12 @@
           <h2 class="text-primary">Skills</h2>
           <ul class="list-group">
               <li class="list-group-item"><strong>Programming Languages:</strong> C, C++, Python, Fortran, Bash</li>
-              <li class="list-group-item"><strong>HPC & Quantum Toolchains:</strong> MPI, OpenMP, CUDA, SIMD intrinsics, Slurm, QuEST, QuESTlink, cuQuantum, Qiskit, Pennylane</li>
-              <li class="list-group-item"><strong>Performance & Profiling:</strong> Intel VTune, Memory Latency Checker, PCM, Valgrind, Linux perf</li>
-              <li class="list-group-item"><strong>DevOps & Build:</strong> Git (+CI/CD), CMake, Catch2/CTest, Spack, Conda, Docker, Kubernetes</li>
-              <li class="list-group-item"><strong>Scientific Tools:</strong> MATLAB, GNU Octave, Wolfram Mathematica</li>
-              <li class="list-group-item"><strong>EDA / TCAD Toolchains:</strong> Synopsys Sentaurus, Silvaco Atlas, QuantumATK/QTX, OMEN/NEMO</li>
+              <li class="list-group-item"><strong>HPC & Quantum Toolchains:</strong> MPI, OpenMP, CUDA, SIMD intrinsics, Slurm, QuEST (co-dev.), QuESTlink, cuQuantum, Qiskit, Pennylane</li>
+              <li class="list-group-item"><strong>Performance & Profiling:</strong> Intel VTune, Memory Latency Checker, PCM, Valgrind, Linux perf, likwid</li>
+              <li class="list-group-item"><strong>DevOps & Build:</strong> Git (+CI/CD), CMake, Make, Catch2/CTest, Spack, Conda, Docker, Kubernetes</li>
+              <li class="list-group-item"><strong>Development Environments \& Editors:</strong> VS Code, Vim, gdb</li>
+              <li class="list-group-item"><strong>Scientific Tools:</strong> MATLAB, GNU Octave, Wolfram Mathematica, Gnuplot, JupyterLab, ParaView</li>
+              <li class="list-group-item"><strong>EDA / TCAD:</strong> NESS (co-dev.), Synopsys Sentaurus, Silvaco Atlas, QuantumATK/QTX, OMEN/NEMO</li>
               <li class="list-group-item"><strong>Personal:</strong> Quick learner, strong communicator, collaborative, problem-solver, detail-oriented, adaptable</li>
           </ul>
       </section>
@@ -118,7 +119,7 @@
                   Device Modelling Group – TCAD Software Developer (NESS, C++)
                   <ul class="mt-2">
                       <li>Co-developed, optimized, and extended a Non-Equilibrium Green’s Function (NEGF) quantum transport solver for both effective-mass and k·p Hamiltonians.</li>
-                      <li>Developed high-performance numerical algorithms for novel physics model: quantum tunnelling & interference, first-principles simulations with on-the-fly effective-mass extraction, finite-difference/-volume discretization schemes, statistical-variability workflows, Poisson–Schrödinger solver, and ML-accelerated NEGF, Josephson junction devices and silicon spin qubits.</li>
+                      <li>Developed high-performance numerical solvers for coupled PDE systems, including Poisson–Schrödinger and quantum transport equations, using finite-difference and finite-volume methods; implemented workflows for quantum tunnelling, statistical variability, and first-principles effective-mass extraction; integrated ML-accelerated NEGF for device-scale simulation of Josephson junctions and silicon spin qubits.</li>
                       <li>Designed next-generation Si and III–V devices including 3 nm GAA NSFETs, FinFET/planar MOSFETs, and resonant-tunnelling diodes for PUFs with Synopsys Sentaurus (SDEVICE), QuantumATK/QTX, Silvaco Atlas, and OMEN/NEMO – validating performance against industry roadmaps.</li>
                       <li>Led CI/CD and HPC-scaling initiatives: migrated codebase to Git, containerized workflows, implemented unit testing, and tuned hybrid MPI + OpenMP parallelism.</li>
                       <li>Produced comprehensive documentation, tutorials and demos. Provided technical software support to academic and industrial partners, and onboarded/mentored junior developers.</li>
@@ -129,7 +130,7 @@
                   <ul class="mt-2">
                       <li>Analytical & numerical investigation of quantum transport properties (non-equilibrium and spin)
                           in superconductor–ferromagnet (and –antiferromagnet) proximity-coupled heterostructures.</li>
-                      <li>Developed numerical packages utilizing the Eilenberger/Usadel quasiclassical Green’s function methods and quantum circuit theory (Nazarov).</li>
+                      <li>Developed numerical packages utilizing the Eilenberger/Usadel quasiclassical Green’s function methods and (Nazarov's) quantum circuit theory – involved solving integro-differential and elliptic PDEs under self-consistent boundary conditions to capture mesoscopic transport behavior.</li>
                       <li>Studied multiple phenomena in superconducting hybrids, including:</li>
                       <ul>
                           <li>Generation, control, and detection of equal-spin triplet Cooper pairs in a spin-valve (S/FM) setup.</li>
@@ -377,6 +378,7 @@
       <section id="certifications" class="mb-5">
           <h2 class="text-primary">Certifications</h2>
           <li class="list-group-item">Proficiency in the basics of PennyLane — <a href="https://pennylane.ai/profile/AliRezaei/certificate/introduction-to-pennylane">pennylane.ai</a></li>
+          <li class="list-group-item">Amazon Braket Quantum Application Development — aws Skill Builder</a></li>
           <ul class="list-group">
               <li class="list-group-item">IBM Qunatum (Qiskit) 
                   <ul class="mt-1">
