--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
               <li class="list-group-item"><strong>HPC & Quantum Toolchains:</strong> MPI, OpenMP, CUDA, SIMD intrinsics, Slurm, QuEST (co-dev.), QuESTlink, cuQuantum, Qiskit, Pennylane</li>
               <li class="list-group-item"><strong>Performance & Profiling:</strong> Intel VTune, Memory Latency Checker, PCM, Valgrind, Linux perf, likwid</li>
               <li class="list-group-item"><strong>DevOps & Build:</strong> Git (+CI/CD), CMake, Make, Catch2/CTest, Spack, Conda, Docker, Kubernetes</li>
-              <li class="list-group-item"><strong>Development Environments \& Editors:</strong> VS Code, Vim, gdb</li>
+              <li class="list-group-item"><strong>Development Environments & Editors:</strong> VS Code, Vim, gdb</li>
               <li class="list-group-item"><strong>Scientific Tools:</strong> MATLAB, GNU Octave, Wolfram Mathematica, Gnuplot, JupyterLab, ParaView</li>
               <li class="list-group-item"><strong>EDA / TCAD:</strong> NESS (co-dev.), Synopsys Sentaurus, Silvaco Atlas, QuantumATK/QTX, OMEN/NEMO</li>
+              <li class="list-group-item"><strong>Project Management:</strong> Agile/Waterfall, Gantt, Scrum/Kanban, WBS, stakeholder management, budgeting, RACI, and critical path.</li>
               <li class="list-group-item"><strong>Personal:</strong> Quick learner, strong communicator, collaborative, problem-solver, detail-oriented, adaptable</li>
           </ul>
       </section>
@@ -377,6 +378,7 @@
       <!-- Certifications -->
       <section id="certifications" class="mb-5">
           <h2 class="text-primary">Certifications</h2>
+          <li class="list-group-item">Google Project Management: Professional Certificate — <a href="https://www.coursera.org/account/accomplishments/specialization/2PC29FHGRRGC">Google</a></li>
           <li class="list-group-item">Proficiency in the basics of PennyLane — <a href="https://pennylane.ai/profile/AliRezaei/certificate/introduction-to-pennylane">pennylane.ai</a></li>
           <li class="list-group-item">Amazon Braket Quantum Application Development — aws Skill Builder</a></li>
           <ul class="list-group">
@@ -395,9 +397,9 @@
                   </ul>
               </li>
               <li class="list-group-item">IBM Data Science Professional Certificate — <a href="https://www.credly.com/badges/a15cd94a-8271-4a6c-9611-33232dea9e92/linked_in_profile">Data Science Orientation</a></li>
-              <li class="list-group-item">Machine Learning (Stanford University) — <a href="https://www.coursera.org/account/accomplishments/verify/URRY2UJ3RXLM">Coursera </a></li>
-              <li class="list-group-item">SQL for Data Science (UC Davis) — <a href="https://www.coursera.org/account/accomplishments/verify/5SSQXKFGTSGB">Coursera </a></li>
-              <li class="list-group-item">Object-Oriented Data Structures in C++ (University of Illinois) — <a href="https://www.coursera.org/account/accomplishments/certificate/URZ9VK254GTA">Coursera </a></li>
+              <li class="list-group-item">Machine Learning — <a href="https://www.coursera.org/account/accomplishments/verify/URRY2UJ3RXLM">Stanford University </a></li>
+              <li class="list-group-item">SQL for Data Science — <a href="https://www.coursera.org/account/accomplishments/verify/5SSQXKFGTSGB">UC Davis </a></li>
+              <li class="list-group-item">Object-Oriented Data Structures in C++ — <a href="https://www.coursera.org/account/accomplishments/certificate/URZ9VK254GTA">University of Illinois </a></li>
               <li class="list-group-item">Workshop on Scientific Presenting for Physicists (University of Konstanz)</li>
           </ul>
       </section>
