Fix broken certifications list

--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
       <!-- Certifications -->
       <section id="certifications" class="mb-5">
           <h2 class="text-primary">Certifications</h2>
-          <li class="list-group-item">Google Project Management: Professional Certificate — <a href="https://www.coursera.org/account/accomplishments/specialization/2PC29FHGRRGC">Google</a></li>
-          <li class="list-group-item">Proficiency in the basics of PennyLane — <a href="https://pennylane.ai/profile/AliRezaei/certificate/introduction-to-pennylane">pennylane.ai</a></li>
-          <li class="list-group-item">Amazon Braket Quantum Application Development — aws Skill Builder</a></li>
           <ul class="list-group">
+              <li class="list-group-item">Google Project Management: Professional Certificate — <a href="https://www.coursera.org/account/accomplishments/specialization/2PC29FHGRRGC">Google</a></li>
+              <li class="list-group-item">Proficiency in the basics of PennyLane — <a href="https://pennylane.ai/profile/AliRezaei/certificate/introduction-to-pennylane">pennylane.ai</a></li>
+              <li class="list-group-item">Amazon Braket Quantum Application Development — aws Skill Builder</li>
               <li class="list-group-item">IBM Qunatum (Qiskit) 
                   <ul class="mt-1">
                       <li><a href="https://www.credly.com/earner/earned/badge/cade8cfa-336c-4987-a7b2-2983bc4243b3">Variational Algorithm Design</a></li>
